<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.autonica.moviles.ansa.ActivityUbicaCodigo">
    <!--ETIQUETAS FACTURA Y PROVEEDOR-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:weightSum="2">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_proveedor"
                android:id="@+id/textView"
                android:textColor="#516bfa" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_factura"
                android:id="@+id/textView2"
                android:textColor="#516bfa" />
        </LinearLayout>

    </LinearLayout>
    <!--CONTROLES FACTURA Y PROVEEDOR-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:weightSum="3">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1.5">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmbproveedorcodigo"
                android:background="#cbfbf8" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1.5">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmbfacturacodigo"
                android:layout_weight="1"
                android:background="#cbfbf8"
                android:spinnerMode="dialog" />
        </LinearLayout>

    </LinearLayout>
    <!--ETIQUETAS CODIGO Y CAJA-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:weightSum="2">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_codigo"
                android:id="@+id/textView3"
                android:textColor="#516bfa" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_caja"
                android:id="@+id/textView4"
                android:textColor="#516bfa" />
        </LinearLayout>

    </LinearLayout>
    <!--CONTROLES CODIGO Y CAJA-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:weightSum="3">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1.5">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:drawableLeft="@mipmap/barcode"
                android:id="@+id/txtcodigocodigo"
                android:background="#fc5858"><requestFocus/></EditText>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1.5">
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cmbcajacodigo"
                android:layout_weight="1"
                android:background="#cbfbf8"
                android:spinnerMode="dialog" />
        </LinearLayout>

    </LinearLayout>
    <!--ETIQUETAS QTY Y CANTIDAD Y DESC Y UBIC-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:weightSum="4">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_qty"
                android:textColor="#516bfa"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_cantidad"
                android:id="@+id/textView6"
                android:textColor="#516bfa" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_desc"
                android:id="@+id/textView7"
                android:textColor="#516bfa" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ubicacion"
                android:id="@+id/textView8"
                android:textColor="#516bfa" />
        </LinearLayout>
    </LinearLayout>
    <!--CONTROLES QTY Y CANTIDAD Y DESC Y UBIC-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:weightSum="4">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">

            <EditText
                android:id="@+id/txtqtycodigo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@mipmap/numero"
                android:editable="false"
                android:ems="10"
                android:enabled="false"
                android:inputType="textPersonName"
                android:text="0"
                android:textColor="@color/abc_search_url_text_selected"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:drawableLeft="@mipmap/numero"
                android:ems="10"
                android:id="@+id/txtcantidadcodigo"
                android:enabled="false"
                android:editable="false"
                android:layout_weight="0.50"
                android:text="0"
                android:textColor="@color/abc_search_url_text_selected" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:drawableLeft="@mipmap/numero"
                android:ems="10"
                android:id="@+id/txtdesccodigo"
                android:editable="false"
                android:enabled="false"
                android:text=""
                android:textColor="@color/abc_search_url_text_selected" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:drawableLeft="@mipmap/numero"
                android:ems="10"
                android:id="@+id/txtubiccodigo"
                android:editable="false"
                android:enabled="false"
                android:text=""
                android:textColor="@color/abc_search_url_text_selected" />
        </LinearLayout>
    </LinearLayout>
    <!--ETIQUETAS DE CONTADOR CODIGOS-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:weightSum="2">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0 "
                android:id="@+id/lbcontadorcodigo"
                android:textColor="#516bfa" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="De "
                android:id="@+id/lbdecodigo"
                android:textColor="#516bfa" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:id="@+id/lbtotalcodigo"
                android:textColor="#516bfa" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_weight="1"></LinearLayout>

    </LinearLayout>
    <!--CONTROL LISTWIEW-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lstcodigos"
            android:background="#dce7fc" />
    </LinearLayout>

</LinearLayout>
